wip:agent slide

--- a/review slide/Agent/main.tex
+++ b/review slide/Agent/main.tex
@@ -23,12 +23,9 @@
 \setbeamertemplate{itemize subitem}{\textbullet}
 \usepackage[version=4]{mhchem}
 \geometry{left=1cm,right=1cm}
-\title[ML4DFT]{Machine Learning-Inspired Advancements in Density Functional Theory}
-\author[J. Zhao]{Jiaxi Zhao (NUS) \\ joint work with Tianbo Li, Zekun Shi, and Min Lin
-@ SAIL\\
-Giovanni Vignale and Qianxiao Li @ NUS}
-\date[\today]{\today\\
-Job talk @ Bytedance}
+\title[Code Agent]{21 Days with Claude Code}
+\author[J. Zhao]{Jiaxi Zhao (NUS)}
+\date[\today]{\today}
 
 % TODO: add reference to each slide, better use a concise notion
 \begin{document}
@@ -39,6 +36,28 @@ Job talk @ Bytedance}
 \end{frame}
 
 
+\begin{frame}{How does AI agent use tool?}
+	\begin{itemize}
+		\item MCP. 
+	\end{itemize}
+\end{frame}
+
+
+\begin{frame}{Agent literature}
+	\begin{itemize}
+		\item 1. 
+	\end{itemize}
+\end{frame}
+
+
+\begin{frame}{Reverse engineering the Claude Code}
+	\begin{itemize}
+		\item System prompts
+		\item Agentic workflow 
+	\end{itemize}
+\end{frame}
+
+
 \begin{frame}{Good features}
 	\begin{itemize}
 		\item 1. TODO list
@@ -46,6 +65,18 @@ Job talk @ Bytedance}
 		% 	\centering 
 		% 	\includegraphics[width=.3\textwidth]{fig/qrcode.jpg} 
 		% \end{figure}
+	\end{itemize}
+\end{frame}
+
+
+\begin{frame}{I have tested Claude on...}
+	\begin{itemize}
+		\item Scientific computing code reading (99\%)
+		\item Modify docker file and environment (99\%)
+		\item Write unit test given clear interface and complete instructions
+		\item Debug my hand-written spectral solver for 2D NS equation (40\%)
+		\item Set hydra for multiple run experiments (20\%)
+		\item Write Poisson solver over radial grid (NA)
 	\end{itemize}
 \end{frame}
 
