--- a/review slide/Agent/main.tex
+++ b/review slide/Agent/main.tex
@@ -92,6 +92,20 @@
 \end{frame}
 
 
+\begin{frame}{Claude Code as a tool}
+	\begin{itemize}
+		\item Many people may ignore or even realize: Claude Code highly
+		decrease the barrier for most of the tasks:
+		\begin{itemize}
+			\item Learn a heavy repo
+			\item Handle the environment setup
+		\end{itemize}
+	\end{itemize}
+\end{frame}
+
+
+
+
 % \begin{frame}{Potential improvement}
 % 	\begin{itemize}
 % 		\item Using greedy algorithm to optimize for more Gaussian modes, i.e.
